--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,7 @@ a {
   background-color: white;
   z-index: 2;
   padding: 40px 0;
-  position: fixed;
+  /*position: fixed;*/
   width: calc(100vw - 100px);
   max-width: 1400px;
   margin: auto;
@@ -86,7 +86,7 @@ a {
 .header__logo h1 {
   color: red;
   font-size: 24px;
-  letter-spacing: 1%;
+  /*letter-spacing: 1%;*/
   text-transform: uppercase;
   font-weight: 800
 }
@@ -345,8 +345,8 @@ a {
   right: 0;
   margin-top: 15px;
   background: #ffffff;
-  -webkit-box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.09);
-  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.09);
+  -webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, 0.09);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.09);
   border-radius: 10px;
   overflow: hidden;
   padding: 10px 0;
@@ -400,7 +400,7 @@ a {
 .pizza-block__title {
   font-size: 20px;
   font-weight: 900;
-  letter-spacing: 1%;
+  /*letter-spacing: 1%;*/
   margin-bottom: 20px
 }
 
@@ -447,8 +447,8 @@ a {
 
 .pizza-block__selector ul li.active {
   background: #ffffff;
-  -webkit-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.04);
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.04);
+  -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
   border-radius: 5px;
   cursor: auto
 }
