--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,7 @@ a {
   background-color: white;
   z-index: 2;
   padding: 40px 0;
-  height: 20vh;
+  min-height: 176px;
   position: fixed;
   width: calc(100vw - 100px);
   max-width: 1400px;
@@ -487,7 +487,7 @@ a {
 }
 
 .content {
-  padding: 275px 0 0 0;
+  padding: 200px 0 0 0;
 }
 
 .content__title {
@@ -871,5 +871,8 @@ a {
   font-size: 18px
 }
 @media screen and (max-width: 800px)  {
-
+  .header__logo img {
+    height: 70px;
+    width: 70px;
+  }
 }
