--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,7 @@ a {
   z-index: 2;
   padding: 40px 0;
   min-height: 176px;
-  /*position: fixed;*/
+  position: fixed;
   width: calc(100vw - 100px);
   max-width: 1400px;
   margin: auto;
@@ -882,6 +882,6 @@ a {
     height: 130px;
   }
   .content__items {
-    justify-content: space-between;
+    justify-content: space-around;
   }
 }
