--- a/src/App.css
+++ b/src/App.css
@@ -352,7 +352,7 @@ a {
   border-radius: 10px;
   overflow: hidden;
   padding: 10px 0;
-  width: 160px
+  width: 200px
 }
 
 .sort__popup ul {
@@ -801,8 +801,7 @@ a {
 
 .cart__bottom-buttons .go-back-btn span {
   color: #c3c3c3;
-  font-weight: 500;
-  font-weight: 600
+  font-weight: 600;
 }
 
 .cart__bottom-buttons .go-back-btn:hover {
@@ -852,10 +851,10 @@ a {
   color: #777777
 }
 
-.cart--empty icon {
-  position: relative;
-  top: 2px
-}
+/*.cart--empty icon {*/
+/*  position: relative;*/
+/*  top: 2px*/
+/*}*/
 
 .cart--empty img {
   display: block;
