--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,103 @@
   -webkit-box-sizing: border-box;
   box-sizing: border-box
 }
+#menu {
+  display: none;
+  background-color: transparent;
+  width: 35px;
+  height: 30px;
+  margin: 65px -20px 20px 20px;
+  cursor: pointer;
+}
+.bar {
+  height: 5px;
+  width: 100%;
+  background-color: #b81568;
+  display: block;
+  border-radius: 5px;
+}
+#bar1 {
+  transform: translateY(-4px);
+}
+#bar3 {
+  transform: translateY(4px);
+}
+.nav_opened li a{
+  margin-right: 10px;
+  color: black;
+  text-decoration: none;
+  font-size: 20px;
+}
+.nav_opened li a:hover{
+  font-weight: bold;
+}
+.nav_opened li {
+  list-style: none;
+  padding: 16px 0;
+}
+.nav_opened {
+  text-align: right;
+  padding: 0;
+  margin: 0 20px;
+  transition: 0.3s ease;
+  display: none;
+}
+.menu_bg, #menu-bar {
+  top: 0;
+  right: 0px;
+  position: absolute;
 
+}
+#menu-bar {
+  z-index: 2;
+}
+.menu_bg {
+  z-index: 1;
+  width: 0;
+  height: 0;
+  margin: 65px -10px 20px 20px;
+  border-radius: 50%;
+  background: radial-gradient(circle,#e94498,#b81568);
+  transition: 0.3s ease;
+}
+.change_bg {
+  width: 550px;
+  height: 540px;
+  transform: translate(60%,-40%);
+}
+.change {
+  margin: 65px -40px 20px 20px;
+  display: block;
+  background: transparent;
+}
+.change .bar {
+  background-color: black;
+}
+.change #bar1 {
+  transform: translateY(4px) rotateZ(-45deg);
+}
+.change #bar3 {
+  transform: translateY(-4px) rotate(45deg);
+}
+.change #bar2 {
+  opacity: 0;
+}
+@media screen and (max-width: 850px){
+  #menu {
+    display: block;
+  }
+  .nav {
+    display: none;
+  }
+  .sort {
+    margin-top: 15px;
+  }
+}
+@media screen and (min-width: 850px) {
+  .content__top {
+    display: flex;
+  }
+}
 html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%
@@ -311,7 +407,8 @@ a {
 }
 
 .sort {
-  position: relative
+  position: relative;
+  /*margin-top: 15px;*/
 }
 
 .sort__label {
@@ -508,7 +605,7 @@ a {
 .content__top {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex;
+  /*display: flex;*/
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
