--- a/src/App.css
+++ b/src/App.css
@@ -435,7 +435,7 @@ a {
 
 .categories li {
   margin-top: 15px;
-  width: 150px;
+  /*width: 150px;*/
   text-align: center;
 }
 
@@ -466,6 +466,15 @@ a {
 .categories ul li.active {
   background-color: #282828;
   color: #fff
+}
+
+@media screen and (max-width: 500px){
+  .categories ul li {
+    /*width: 90px;*/
+    font-size: 15px;
+    text-align: center;
+    padding: 10px 20px;
+  }
 }
 
 .sort {
@@ -743,6 +752,25 @@ a {
   stroke: #232323;
   stroke-width: 1.9
 }
+@media screen and (max-width: 850px){
+  .cart .content__title {
+    font-size: 20px
+  }
+
+  .cart .content__title svg {
+    width: 20px;
+    height: 20px;
+    margin-right: 5px;
+  }
+
+  .cart__clear svg {
+    width: 20px;
+  }
+  .cart .cart__clear span {
+    font-size: 15px;
+    margin-left: 5px;
+  }
+}
 
 .cart__clear {
   display: -webkit-box;
@@ -799,12 +827,38 @@ a {
   -ms-flex-align: center;
   align-items: center;
   margin-right: 15px;
-  width: 10%
+  /*width: 10%*/
 }
 
 .cart__item-img img {
   width: 80px;
   height: 80px
+}
+
+@media screen and (max-width: 500px) {
+  .cart__item .cart__item-img {
+    margin-right: 5px;
+    width: 20%;
+  }
+  .cart__item-img img {
+    width: 50px;
+    height: 50px;
+  }
+
+  .cart__item .cart__item-info {
+    width: 27%
+  }
+
+  .cart__item .cart__item-info h3 {
+    font-size: 13px;
+    line-height: 27px;
+    letter-spacing: 0.01em
+  }
+
+  .cart__item .cart__item-info p {
+    font-size: 13px;
+    color: #8d8d8d
+  }
 }
 
 .cart__item-info {
@@ -854,6 +908,30 @@ a {
   font-size: 22px
 }
 
+@media screen and (max-width: 850px) {
+  .cart__item .cart__item-count {
+    width: 20%;
+    margin-right: 10px;
+  }
+  .cart__item-count .button--circle {
+    width: 20px;
+    height: 20px;
+    min-width: 20px;
+  }
+  .cart__item-count .button--circle svg{
+    width: 10px;
+    height: 10px;
+  }
+  .cart__item-count b {
+    font-size: 15px;
+    margin: 0 3px;
+  }
+  /*TODO wraper on small screens*/
+  .wrapper {
+    width: 100%;
+  }
+}
+
 .cart__item-price {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -871,6 +949,31 @@ a {
   font-weight: bold;
   font-size: 22px;
   letter-spacing: 0.01em
+}
+
+@media screen and (max-width: 850px) {
+  .cart__item .cart__item-price {
+    width: 20%;
+  }
+
+  .cart__item .cart__item-price b {
+    font-size: 13px;
+  }
+
+  .cart__item .cart__item-remove {
+    width: 7%
+  }
+
+  .cart__item-remove .button--circle {
+    width: 20px;
+    height: 20px;
+    min-width: 20px;
+  }
+
+  .cart__item .cart__item-remove .button--circle svg{
+    width: 10px;
+    height: 10px;
+  }
 }
 
 .cart__item-remove {
@@ -996,16 +1099,29 @@ a {
   padding: 16px
 }
 
+@media screen and (max-width: 850px) {
+  .cart__bottom .cart__bottom-details span {
+    font-size: 16px;
+  }
+  .cart__bottom .cart__bottom-buttons a {
+    padding: 10px;
+    width: 135px;
+  }
+  .cart__bottom .cart__bottom-buttons a span {
+    font-size: 16px;
+  }
+}
+
 .cart--empty {
   margin: 0 auto;
-  width: 560px;
-  height: 500px;
+  /*width: 560px;*/
+  height: 60vh;
   text-align: center
 }
 
 .cart--empty--block {
   font-size: 32px;
-  margin: 250px auto;
+  margin: 100px auto 0 auto;
 }
 .cart--empty--block h1 {
   font-size: 32px;
@@ -1043,7 +1159,7 @@ a {
     width: 70px;
   }
   .content {
-    padding: 190px 0 0 0;
+    padding: 150px 0 0 0;
   }
   .header {
     height: 130px;
