--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap');
 
+html {
+  scroll-behavior: smooth;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -1220,4 +1224,16 @@ a {
 }
 #form-checkOut .talrunis input {
   width: 100%;
+}
+
+            /*UP BUTTON*/
+.up-button {
+  width: 50px;
+  height: 50px;
+  background-color: black;
+  position: fixed;
+  z-index: 999;
+  bottom: 30px;
+  right: 30px;
+  display: none;
 }
