--- a/src/App.css
+++ b/src/App.css
@@ -1199,6 +1199,10 @@ a {
           /*CheckOut*/
 #form-checkOut {
   text-align: center;
+  width: 100%;
+  border-top: 1px solid #f6f6f6;
+  padding-top: 30px;
+  margin-top: 30px;
 }
 .form {
   width: 45%;
@@ -1206,10 +1210,10 @@ a {
 }
 #form-checkOut input {
   margin-bottom: 30px;
-  width: 250px;
+  width: 100%;
   height: 40px;
   border-radius: 20px;
-  border: 2px solid gray;
+  border: 2px solid red;
   padding: 20px;
   font-size: 18px;
 }
@@ -1237,4 +1241,56 @@ a {
   right: 30px;
   display: none;
   cursor: pointer;
+}
+
+            /*ORDER POP UP*/
+.bg-overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  background-color: rgba(0,0,0,0.5);
+}
+
+.pop-up-order {
+  width: 100%;
+  min-height: 300px;
+  height: 40vh;
+  background-color: white;
+  border-radius: 30px;
+  min-width: 290px;
+}
+
+.order-card {
+  width: 70%;
+  margin: 0 auto;
+}
+
+.thank-you {
+  text-align: center;
+  padding: 30px 0 15px 0;
+  color: red;
+  font-size: 3rem;
+  font-weight: bold;
+  border-bottom: 1px solid #f6f6f6;
+}
+
+.order-info {
+  text-align: center;
+  padding-top: 30px;
+  font-size: 1.3rem;
+}
+.order-info span {
+  border-bottom: 1px solid red;
+}
+
+@media screen and (max-width: 340px) {
+  .thank-you {
+    font-size: 2rem;
+  }
+  .order-info {
+    font-size: 1.1rem;
+  }
 }
