--- a/src/App.css
+++ b/src/App.css
@@ -1330,14 +1330,22 @@ a {
   animation-duration: 1.5s;
   animation-iteration-count: infinite;
   animation-timing-function: linear;
-  /*animation-name: loadingScreen2;*/
-  /*animation-duration: 1s;*/
-  /*animation-iteration-count: infinite;*/
-  /*animation-timing-function: linear;*/
 }
 .bg-overlay .loading-img img {
   width: 300px;
   height: 300px;
+}
+
+@media screen and (max-width: 850px){
+  .bg-overlay .loading-img {
+    width: 150px;
+    height: 150px;
+    animation-name: loadingScreen2;
+  }
+  .bg-overlay .loading-img img {
+    width: 150px;
+    height: 150px;
+  }
 }
 
 @keyframes loadingScreen {
@@ -1349,11 +1357,11 @@ a {
 }
 
 @keyframes loadingScreen2 {
-  0%   {left: 0}
-  25%  {left: 25%}
-  50%  {left: 50%}
-  75%  {left: 70%}
-  100% {left: 120%}
+  0%   {width: 150px; height: 150px}
+  25%  {width: 160px; height: 160px}
+  50%  {width: 170px; height: 170px}
+  75%  {width: 160px; height: 160px}
+  100% {width: 150px; height: 150px}
 }
 
                       /*CONTACTS*/
